<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="middle_string">V.S.</string>
    <string name="title_page">Welcome</string>
    <string name="instructions">Instructions: Select either rock, paper or scissors to play</string>
    <string name="statistics_title">Your all time statistics</string>
    <string name="placeholder">Placeholder</string>
    <string name="statistics">Win: %1$d Draw: %2$d Lose: %3$d</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="match_title">Result</string>
    <string name="date">date</string>
    <string name="draw">draw</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">History</string>
    <string name="clear_history">Clear History</string>
</resources>
